--- a/login.css
+++ b/login.css
@@ -16,7 +16,6 @@ fieldset
   text-align: center;
   width: 650px;
   height: 500px;
-  padding-bottom: 20px;
   margin: auto auto;
   box-shadow: 0 0 5px black;
   font-size: 18px;
@@ -32,7 +31,8 @@ fieldset
   font-weight: bold;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin-bottom: 0px;
-  margin-top: 15%;
+  margin-top: 18%;
+  margin-bottom: 20px;
 }
 fieldset input{
   border-radius: 5px;
